[package]
name = "hunger"
version = "0.1.0"
authors = ["mat"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
serde = "1.0.114"
serde_json = "1.0"
tinytemplate = "1.1.0"
image = "0.23.6"
rusttype = "0.9.2"
